# agent-proxy-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_zh.md  ROADMAP.md  _new_main.py  docker-compose.yml  fix_core.py  pyproject.toml  pyrightconfig.json  test_out.txt  test_output.txt
.github/workflows/: ci.yml
benchmark/: README.md
benchmark/scripts/: benchmark.py  generate_report.py  launcher.py  mock_llm_server.py  run_benchmark.sh
benchmark_v2/: README.md  config.yaml
benchmark_v2/scripts/: benchmark_v2.py
config/: default.yaml  guardrails.yaml
dashboard/: app.py
dashboard/pages/: budget.py  eval.py  guardrails.py  live.py  system.py  traces.py
scripts/: demo.py  docker_test.sh  gateway_overhead_bench.py  seed_data.py  startup_check.py  test_pii_live.py
src/gateway/: __init__.py  main.py  metrics.py
src/gateway/adapter/: __init__.py  _openai_types.py  anthropic.py  base.py  normalizer.py  openai.py
src/gateway/api/: budget.py  eval.py  guardrails.py  traces.py
src/gateway/budget/: __init__.py  circuit_breaker.py  rate_limiter.py  request_timeout.py  token_counter.py
src/gateway/eval/: __init__.py  heuristic.py  llm_judge.py  pipeline.py
src/gateway/guardrails/: __init__.py  action.py  audit.py  config.py  engine.py  scope.py  session.py  sqlite_session.py
src/gateway/guardrails/rules/: __init__.py  agency.py  anomaly.py  base.py  content.py  credential_leak.py  format_validation.py  hallucination.py  injection.py  jailbreak.py  pii.py  system_prompt.py  topic.py
src/gateway/policy/: __init__.py  loader.py  store.py
src/gateway/proxy/: __init__.py  core.py  middleware.py  sse.py
src/gateway/trace/: __init__.py  engine.py  pricing.py  store.py  tree.py
src/shared/: config.py  constants.py  logging.py  models.py
tests/: api_test_report.txt  conftest.py  test_adapter.py  test_api_connectivity.py  test_api_e2e.py  test_budget.py  test_eval.py  test_guardrails.py  test_integration.py  test_middleware.py  test_pricing.py  test_trace.py
