[project]
name = "agent-proxy-gateway"
version = "0.1.0"
description = "Transparent proxy gateway between AI Agents and LLM/Tool APIs — intercept, trace, guardrail, evaluate, and control all Agent traffic"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
    "presidio-analyzer>=2.2",
    "yaml-config>=0.1",
    "pyyaml>=6.0",
    "streamlit>=1.35",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
gateway = "gateway.main:run_server"
dashboard = "dashboard.app:run_dashboard"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]