[project]
name = "agent-proxy-gateway"
version = "0.1.0"
description = "Transparent proxy gateway between AI Agents and LLM/Tool APIs — intercept, trace, guardrail, evaluate, and control all Agent traffic"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
    "presidio-analyzer>=2.2",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "streamlit>=1.35",
    "tiktoken>=0.7",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
gateway = "gateway.main:run_server"
dashboard = "dashboard.app:run_dashboard"
validate-config = "gateway.main:validate_config"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E701",  # 项目统一风格: if not x: return ...
    "N818",  # 异常命名 Error 后缀不强制
]

[tool.ruff.lint.per-file-ignores]
# 测试文件允许长行和未使用变量
"tests/*" = ["E501", "F841"]
# benchmark 文件允许长行
"benchmark/**" = ["E501"]
"benchmark_v2/**" = ["E501"]
# 脚本和草稿文件允许长行
"scripts/*" = ["E501", "E402"]
"_new_main.py" = ["E501", "E701"]
# 个别 src 文件的长行(仅超1-2字符)
"src/gateway/adapter/anthropic.py" = ["E501"]
"src/gateway/adapter/base.py" = ["E501"]
"src/gateway/api/eval.py" = ["E501"]
"src/gateway/main.py" = ["E501"]
"src/gateway/trace/store.py" = ["E501"]
"src/gateway/proxy/sse.py" = ["E501"]
"dashboard/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# 以下错误码为项目设计模式或已知类型系统限制，不影响运行时正确性：
# arg-type: guard rules 子类使用 **dict[str, object] 模式构造父类
# call-overload: dict[str, object] 中取值后传给 int()/float()
# union-attr: sqlite Connection | None 的模式
# assignment/operator/var-annotated: 已知的类型推断限制
disable_error_code = ["arg-type", "call-overload", "union-attr", "assignment", "operator", "var-annotated"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires running gateway + API key)",
]